Tests/ShouldFail/try18fail.adl
CONTEXT Test

PATTERN Test18
RELATION r[X*Y]
RELATION s[X*A]
RELATION t[A*Y]
RELATION t[B*Y]
RULE r = s;I[A];t
RULE I[D] = I[A]/\I[B]
ENDPATTERN

ENDCONTEXT

{-
   Purpose: Since try18 and try18b should both be okay, this script must be ambiguous.
   Reason: cannot disambiguate occurrences of t because concepts A and B are related
   Result: FAIL    
-}